controls/graphView/graphView.css
:root
{
    --arithmeticSymbolSize: 26;
    --colorBackSize:        45px;
}


#graphView
{
    z-index:  0;
    display:  block;
    overflow: hidden;
    height:   calc(100% - 40px);
    position: relative;
}


#wireContainer
{
    position:       absolute;
    width:          100%;
    height:         calc(100% - 1px);
    z-index:        0;
    pointer-events: none;
    /* box-shadow: 0 0 0 1px red inset; */
}


#graphViewCapture
{
    position:   fixed;
    left:       0;
    top:        0;
    width:      100%;
    height:     calc(100% - 1px);
    z-index:    1;
    box-shadow: 0 0 0 1px green inset;
}

